# tiny-music-player

./: .gitmodules  CMakeLists.txt  README.md
src/: application.cpp  application.h  main_window.cpp  main_window.h  slider_timer.cpp  slider_timer.h  song.h
src/audio/: context.cpp  context.h  music.cpp  music.h  sound_data.cpp  sound_data.h
src/audio/openal/: buffer.cpp  buffer.h  info_and_debug.cpp  info_and_debug.h  listener.cpp  listener.h  source.cpp  source.h
src/other/: logging.h  vec3.h
